fixing navbar dropdown alignments

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -126,18 +126,23 @@ header {
 
 .desktop-nav .dropdown {
   position: absolute;
-  right: 0;
-  left: auto;
+  left: 0; /* Position the dropdowns from the left edge */
   box-shadow: 0 10px 15px -3px rgba(46, 41, 51, 0.08),
     0 4px 6px -2px rgba(71, 63, 79, 0.16);
   font-size: 0.875rem;
   z-index: 9999;
   min-width: 10rem;
+  max-width: calc(100vw - 2rem); /* Limit width to the viewport width */
   padding: 0.5rem 0;
   list-style: none;
   background-color: #fff;
   border-radius: 0.5rem;
   display: none;
+}
+
+.desktop-nav .dropdown.right-aligned {
+  left: auto;
+  right: 0; /* Position the right-aligned dropdowns from the right edge */
 }
 
 .desktop-nav .dropdown.show {
